optimize:[simple-starter-datasource]创建List方法-适配JDK8